--- a/mise en page.css
+++ b/mise en page.css
@@ -1,3 +1,23 @@
+
+nav {
+    /* border-color: black;
+    border-width: 3px;
+    border-style: solid; */
+    border: 3px solid black;
+    padding: 11px; 
+
+    display:flex;
+    justify-content: space-evenly; 
+
+}
+
+nav a {
+    color: crimson;
+    text-decoration: none;
+}
+
+
+
 h1 {
     color: darkblue;
     /*background-color: darkgray; */
@@ -15,7 +35,7 @@ img {
 }
 
 p {
-font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #chapeau {
